--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.stark.parts-storage</groupId>
   <artifactId>parts-storage-model</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
 
   <name>parts-storage-model</name>
   <description>A simple parts-storage-model.</description>
